fix: node 22 caching issue in github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,10 @@ jobs:
         with:
           node-version: '22.x'
           cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
+          # KORREKTUR: Explizite Pfade für den Cache
+          cache-dependency-path: |
+            frontend/package-lock.json
+            backend/package-lock.json
       - name: Install & Run Backend Unit Tests
         run: |
           npm install
