--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -20,22 +20,22 @@ jobs:
         project: [frontend, backend]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Log in to the GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image for scanning
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: ./${{ matrix.project }}
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/turnier-manager-${{ matrix.project }}:scan-latest
       - name: Run Trivy vulnerability scanner
         id: trivy-scan
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: 'ghcr.io/${{ github.repository_owner }}/turnier-manager-${{ matrix.project }}:scan-latest'
           format: 'template'
@@ -47,7 +47,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
       - name: Create GitHub Issue on failure
         if: failure() && steps.trivy-scan.outcome == 'failure'
-        uses: actions/create-issue@v2
+        uses: actions/create-issue@v5
         with:
           title: '🛡️ Sicherheits-Scan fehlgeschlagen für ${{ matrix.project }}'
           body: |
