--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: '22.x'
           cache: 'npm'
           cache-dependency-path: |
-            frontend/package-lock.json
-            backend/package-lock.json
+            ./frontend/package-lock.json
+            ./backend/package-lock.json
       - name: Install & Lint Backend
         run: |
           npm install
