--- a/backend/package.json
+++ b/backend/package.json
@@ -11,44 +11,35 @@
     "test": "jest --config jest.config.js",
     "test:api": "jest --config jest.config.api.js --runInBand",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
-    "pg": "^8.11.3",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1",
+    "pg": "^8.12.0",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.10",
-    "@types/pg": "^8.10.7",
-    "@types/supertest": "^2.0.15",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.8",
+    "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "@types/yamljs": "^0.2.34",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "prettier": "^3.3.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
