--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: '22.x'
           cache: 'npm'
           cache-dependency-path: |
-            ./frontend/package-lock.json
-            ./backend/package-lock.json
+            frontend/package-lock.json
+            backend/package-lock.json
       - name: Install & Lint Backend
         run: |
           npm install
@@ -57,32 +57,21 @@ jobs:
       - name: Create Test Environment File
         run: cp backend/.env.test backend/.env
       - name: Build and Run Docker Compose
-        run: docker-compose up --build -d db backend
+        # KORREKTUR: docker-compose -> docker compose
+        run: docker compose up --build -d db backend
       - name: Wait for Database to be ready
         run: >
-          until docker-compose exec -T db pg_isready --username=$POSTGRES_USER; do
+          # KORREKTUR: docker-compose -> docker compose
+          until docker compose exec -T db pg_isready --username=$POSTGRES_USER; do
             echo "Waiting for database...";
             sleep 2;
           done
         env:
           POSTGRES_USER: testuser
       - name: Run API Tests
-        run: docker-compose exec -T backend npm run test:api
+        # KORREKTUR: docker-compose -> docker compose
+        run: docker compose exec -T backend npm run test:api
       - name: Shutdown Docker Compose
         if: always()
-        run: docker-compose down
-
-  sonarcloud-analysis:
-    needs: [unit-tests, api-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: backend
+        # KORREKTUR: docker-compose -> docker compose
+        run: docker compose down
