--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,10 +30,14 @@ jobs:
       - name: Create Test Env File & Run API Tests
         run: |
           cp backend/.env.test backend/.env
-          docker-compose up --build -d db backend
-          until docker-compose exec -T db pg_isready --username=$POSTGRES_USER; do sleep 2; done
-          docker-compose exec -T backend npm run test:api
-          docker-compose down
+          # KORREKTUR: docker-compose -> docker compose
+          docker compose up --build -d db backend
+          # KORREKTUR: docker-compose -> docker compose
+          until docker compose exec -T db pg_isready --username=$POSTGRES_USER; do sleep 2; done
+          # KORREKTUR: docker-compose -> docker compose
+          docker compose exec -T backend npm run test:api
+          # KORREKTUR: docker-compose -> docker compose
+          docker compose down
         env:
           POSTGRES_USER: testuser
 
