fix: no docker images in gchr.io

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Docker Image Versionen
 # Diese Variablen steuern, welche Basis-Images von Docker Compose verwendet werden.
-IMAGE_OWNER=DEIN_GITHUB_BENUTZERNAME
-APP_NAME=turnier-manager
+IMAGE_OWNER=homa8511
+APP_NAME=turnier-app
 TAG=latest
 
 # Basis-Image Versionen
