--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -13,31 +13,24 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      packages: read
       issues: write
     strategy:
       matrix:
         project: [frontend, backend]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
       - name: Log in to the GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image for scanning
-        uses: docker/build-push-action@v5
-        with:
-          context: ./${{ matrix.project }}
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/turnier-manager-${{ matrix.project }}:scan-latest
       - name: Run Trivy vulnerability scanner
         id: trivy-scan
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'ghcr.io/${{ github.repository_owner }}/turnier-manager-${{ matrix.project }}:scan-latest'
+          # Scannt das 'latest' Image, das vom Release-Workflow veröffentlicht wurde
+          image-ref: 'ghcr.io/${{ github.repository_owner }}/turnier-app-${{ matrix.project }}:latest'
           format: 'template'
           template: '@/contrib/issue.tpl'
           output: 'trivy-results.md'
@@ -51,7 +44,7 @@ jobs:
         with:
           title: '🛡️ Sicherheits-Scan fehlgeschlagen für ${{ matrix.project }}'
           body: |
-            Der automatische Trivy-Scan hat eine oder mehrere kritische/hohe Schwachstellen im Docker-Image für **${{ matrix.project }}** gefunden.
+            Der automatische Trivy-Scan hat eine oder mehrere kritische/hohe Schwachstellen im Docker-Image für **${{ matrix.project }}** (Tag: `latest`) gefunden.
             Bitte überprüfen Sie die Details unten und aktualisieren Sie die betroffenen Abhängigkeiten.
             ### Scan-Ergebnisse
             ${{ steps.trivy-scan.outputs.result }}
