--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,5 +9,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/__tests__/**/*.spec.ts", "node_modules"]
 }
