--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,5 +10,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["src/__tests__/**/*.spec.ts", "node_modules"]
+  "exclude": ["node_modules", "src/__tests__"]
 }
