--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,6 @@ jobs:
       - name: Create Test Environment File
         run: cp backend/.env.test ./.env
       - name: Build and Run Docker Compose services for testing
-        # Verwendet jetzt die CI-spezifische Compose-Datei
         run: docker compose -f docker-compose.ci.yml up --build -d
       - name: Wait for Database to be ready
         run: >
@@ -67,6 +66,11 @@ jobs:
           done
         env:
           POSTGRES_USER: testuser
+      
+      # --- NEUER SCHRITT ---
+      - name: Install dev dependencies in container for testing
+        run: docker compose -f docker-compose.ci.yml exec -T backend npm install
+
       - name: Run API Tests
         run: docker compose -f docker-compose.ci.yml exec -T backend npm run test:api
       - name: Shutdown Docker Compose
