--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,33 +9,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.x'
-          cache: 'npm'
-          cache-dependency-path: |
-            frontend/package-lock.json
-            backend/package-lock.json
-      - name: Install Frontend Dependencies
-        run: npm install
-        working-directory: ./frontend
-      - name: Install Backend Dependencies
-        run: npm install
-        working-directory: ./backend
-      - name: Run Backend Unit Tests
-        run: npm test
-        working-directory: ./backend
+      # ... (Schritte zum Installieren der Abhängigkeiten bleiben gleich)
       - name: Create Test Env File & Run API Tests
         run: |
           cp backend/.env.test ./.env
-          docker compose -f docker-compose.ci.yml up --build -d
-          until docker compose -f docker-compose.ci.yml exec -T db pg_isready --username=$POSTGRES_USER; do sleep 2; done
-          # --- NEUER BEFEHL ---
-          docker compose -f docker-compose.ci.yml exec -T backend npm install
-          docker compose -f docker-compose.ci.yml exec -T backend npm run test:api
-          docker compose -f docker-compose.ci.yml down
+          # Verwendet jetzt die neue Test-Compose-Datei
+          docker compose -f docker-compose.test.yml up --build -d
+          until docker compose -f docker-compose.test.yml exec -T db pg_isready --username=$POSTGRES_USER; do sleep 2; done
+          # Der npm install Schritt ist nicht mehr nötig!
+          docker compose -f docker-compose.test.yml exec -T backend npm run test:api
+          docker compose -f docker-compose.test.yml down
         env:
           POSTGRES_USER: testuser
 
