--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,27 +49,44 @@ jobs:
         run: npm test
         working-directory: ./backend
 
-  api-tests:
+  aapi-tests:
     needs: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Use Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+      
+      - name: Install Backend Dependencies
+        run: npm install
+        working-directory: ./backend
+
       - name: Create Test Environment File
         run: cp backend/.env.test ./.env
-      - name: Build and Run Docker Compose services for testing
-        # Verwendet jetzt die neue Test-Compose-Datei
-        run: docker compose -f docker-compose.test.yml up --build -d
+
+      - name: Start Database Service
+        run: docker compose up -d db
+
       - name: Wait for Database to be ready
         run: >
-          until docker compose -f docker-compose.test.yml exec -T db pg_isready --username=$POSTGRES_USER; do
+          until docker compose exec -T db pg_isready --username=$POSTGRES_USER; do
             echo "Waiting for database...";
             sleep 2;
           done
         env:
           POSTGRES_USER: testuser
+      
+      - name: Set DB Host for Tests on Runner
+        run: echo "POSTGRES_HOST=localhost" >> $GITHUB_ENV
+
       - name: Run API Tests
-        # Der speicherintensive npm install Schritt ist nicht mehr nötig!
-        run: docker compose -f docker-compose.test.yml exec -T backend npm run test:api
-      - name: Shutdown Docker Compose
+        run: npm run test:api
+        working-directory: ./backend
+        
+      - name: Shutdown Database Service
         if: always()
-        run: docker compose -f docker-compose.test.yml down
+        run: docker compose down
