fix: postgres host for api test runner

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,5 +1,5 @@
 # Konfiguration für die Test-Datenbank
-POSTGRES_HOST=localhost
+#POSTGRES_HOST=localhost
 POSTGRES_USER=testuser
 POSTGRES_PASSWORD=testpassword
 POSTGRES_DB=testdb
