fix: sonar project name

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=homa8511_turnier-app
 
 # Name des Projekts, wie er in SonarCloud angezeigt wird
-sonar.projectName=Turnier-Manager App
+sonar.projectName=turnier-app
 
 # Pfad zum TypeScript-Quellcode, der analysiert werden soll
 sonar.sources=src
