fix: sonar organisation missing

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,3 +1,6 @@
+# Eindeutige Kennung der Organisation
+sonar.organization=homa8511
+
 # Eindeutiger Projekt-Schlüssel in SonarCloud
 sonar.projectKey=homa8511_turnier-app
 
